<resources>
    <string name="app_name">MC</string>
    <string name="exit_app">你再点我就走了哦~</string>
    <string name="title">便签列表</string>
    <string name="no_note">目前还没有便签哦~</string>
    <string name="click_add_note">请点击右上角图标添加便签哦~</string>
    <string name="exit_application">无情退出</string>
    <string name="add_note">添加便签</string>
    <string name="please_insert_note">请您先写点东西~</string>
    <string name="please_insert_note_name">请您为标签取个名哟~</string>
    <string name="sure">确定</string>
    <string name="note_detail_time">便签创建时间：</string>
    <string name="note_detail_name">便签名字：</string>
    <string name="note_detail_content">便签内容：</string>
    <string name="note_detail">便签详情</string>
    <string name="warm_toast">温馨提示</string>
    <string name="are_you_sure_delete_this_note">您确定要删除此条便签吗？</string>
    <string name="negative">否</string>
    <string name="positive">是</string>
    <string name="quickly_key">快速搜索关键字</string>
    <string name="again">重试</string>
    <string name="no_network">请检查网络</string>
    <string name="no_date">小编今天没准备小姐姐吗？</string>
    <string name="a_little_love">a little love</string>
    <string name="casual_write">随便写写</string>
    <string name="around_work">随便逛逛</string>
    <string name="health_message">健康资讯</string>
    <string name="download_belle">小主好眼力,快收了她</string>
    <string name="save_image_success">小主快去相册中看看吧~</string>
    <string name="save_image_error">下载貌似失败了呢~</string>
    <string name="transition_img">transition_news_img</string>
    <string name="open_permission_download_belle">小主~要打开权限才能金屋藏娇哦~</string>
    <string name="open_picture">查看图片需要得到您的权限允许~~</string>
    <string name="beautiful_sister">漂亮姐姐</string>
    <string name="welfare_auto_look">福利自己找</string>
    <string name="no_big_photo">这里像素不是很好，所以不做大图展示了~~~~</string>
    <string name="the_secret_mistress">金屋藏娇</string>
    <string name="no_save_looker_girl">小主目前还没有收藏小姐姐哦~</string>
    <string name="look_network_state">小主，好像没网了~~</string>
    <string name="i_think_you_must_down_music">我想也许你需要下载一些歌曲了~~~</string>
    <string name="maybe_you_should_enlarge_music_sound">也许你扩大一下音量就可以听见歌曲了哦~~~</string>
    <string name="user_setting">用户设置</string>
    <string name="open_bgm">开启背景音乐</string>
    <string name="close_bgm">关闭背景音乐</string>
    <string name="open_wifi_load_image">开启wifi加载图片</string>
    <string name="close_wifi_load_image">关闭wifi加载图片</string>
    <string name="click_a_star">开源不易，来个star呗</string>
    <string name="project_address">项目地址：https://github.com/hyyaoming/NoteProject</string>
    <string name="often_set">常用设置</string>
    <string name="casual_look">随便逛逛</string>
    <string name="GitHub">GitHub</string>
    <string name="hard_loading">努力加载中...</string>
    <string name="change_iv_avatar">点击切换头像</string>
    <string name="loading_no_data">暂无数据...</string>
</resources>
