<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_note"
            android:icon="@drawable/look1"
            android:title="@string/casual_write" />

        <item
            android:id="@+id/menu_picture"
            android:icon="@drawable/ic_nav_picture"
            android:title="@string/around_work" />

        <item
            android:id="@+id/menu_health"
            android:icon="@drawable/ic_nav_news"
            android:title="@string/health_message" />

        <item
            android:id="@+id/menu_sister"
            android:icon="@drawable/menu_belle_sister"
            android:title="@string/beautiful_sister" />
    </group>

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/menu_setting"
            android:icon="@drawable/user_setting"
            android:title="@string/user_setting" />
    </group>

</menu>